--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <div class="container">
     <header>🎆가위바위보를 해봅시다🎆</header>
     <section id="rspImg">
-      <ul>
-        <li><img src="./img/✊.svg" alt="바위"></li>
-        <li><img src="./img/✌.svg" alt="가위"></li>
-        <li><img src="./img/🖐.svg" alt="보"></li>
+      <ul style="transform:">
+        <li id="rock" ><img src="./img/✊.svg" alt="바위"></li>
+        <li id="scissors"><img src="./img/✌.svg" alt="가위"></li>
+        <li id="paper"><img src="./img/🖐.svg" alt="보"></li>
       </ul>
     </section>
     <section id="result">
