💄 UI 수정 꾸미기

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 </head>
 <body>
   <div class="container">
-    <header>🎆가위바위보를 해봅시다🎆</header>
-    <section id="rspImg" class="visible">
+    <header>✨가위바위보를 해봅시다✨</header>
+    <section id="rspImg">
       <ul style="transform:">
         <li class="rock" ><img src="./img/✊.svg" alt="바위"></li>
         <li class="scissors"><img src="./img/✌.svg" alt="가위"></li>
         <li class="paper"><img src="./img/🖐.svg" alt="보"></li>
       </ul>
     </section>
-    <section id="result" class="hide">
+    <section id="result">
       <div></div>
       <button id="retry">다시하기</button>
     </section>
